updated dependencies & migrated rest of days to new structure